--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/public/logotipo/logo.png" type="image/x-icon">
     
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/mobile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Dev Pereira</title>
@@ -354,7 +354,7 @@
                 </div>
 
                 <div class="btn-msg">
-                    <div class="text"><li><a href="https://wa.me/5561985542719?text=Quero%20conhecer%20mais%20sobre%20seus%20projetos..."><i class="bi bi-whatsapp"></i><p>Enviar uma Mensagem</p></a></li></div>
+                    <div class="text"><li><a href="https://wa.me/5561999654226?text=Quero%20conhecer%20mais%20sobre%20seus%20projetos..." target="_blank"><i class="bi bi-whatsapp"></i><p>Enviar uma Mensagem</p></a></li></div>
                 </div>
 
                 <div class="sociais">
