--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
         <div class="menu">
             <div class="menu-info">
                 <div class="logo">
-                    <img src="/public/logotipo/logo.png" alt="logo" width="100px">
+                    <img src="/logotipo/logo.png" alt="logo" width="100px">
                 </div>
 
                 <div class="navbar">
