Buttom return page project

--- a/projetos.html
+++ b/projetos.html
@@ -35,6 +35,10 @@
 
         <section class="projetos" id="projetos">
 
+            <a href="index.html" class="uppage-mobile">
+                <img src="/public/logotipo/seta.png" alt="btn-up">
+            </a>
+
 
             <div class="projetos-desenvolvidos">
             <div class="titulo">
