--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
                             <p>Sociais</p>
                         </div>
                         <div class="links-soc"> 
-                            <div class="text"><li><a href="#"><i class="bi bi-instagram"></i></a></li><p>@dev.pereira_</p></div>
-                            <div class="text"><li><a href="#"><i class="bi bi-linkedin"></i></a></li><p>Diego Pereira</p></div>
-                            <div class="text"><li><a href="#"><i class="bi bi-github"></i></a></li><p>@DevPereira1st</p></div>
-                            <div class="text"><li><a href="#"><i class="bi bi-discord"></i></a></li><p>@diin1st</p></div>
+                            <div class="text"><li><a href="https://www.instagram.com/dev.pereira_/"  target="_blank" ><i class="bi bi-instagram"></i></a></li><p>@dev.pereira_</p></div>
+                            <div class="text"><li><a href="https://www.linkedin.com/in/diego-pereira-8b3063249/" target="_blank"> <i class="bi bi-linkedin"></i></a></li><p>Diego Pereira</p></div>
+                            <div class="text"><li><a href="https://github.com/DevPereira1st/DevPereira1st"  target="_blank"> <i class="bi bi-github" ></i></a></li><p>@DevPereira1st</p></div>
+                            <div class="text"><li><a href="https://discordapp.com/users/569250957456834582"><i class="bi bi-discord"  target="_blank" ></i></a></li><p>@diin1st</p></div>
                         </div>
                     </div>
                 </div>
