--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <div class="links-desc">
                         <div class="btn-github">
-                            <button type="button"><a href="#"><i class="bi bi-file-earmark-person-fill"></i></a></button>
+                            <button type="button"><a href="/public/curriculo/Curriculo Tec.pdf" target="_blank"><i class="bi bi-file-earmark-person-fill"></i></a></button>
                         </div>
                         <div class="btn-cv">
                             <button type="button"><a href="https://github.com/DevPereira1st"><i class="bi bi-github"></i> GitHub</a></button>
