Formas de Pagamento

--- a/index.html
+++ b/index.html
@@ -176,6 +176,23 @@
                     </div>  
                 </div>
             </div>
+
+            <div class="pagamentos">
+                <div class="titu_pagamentos">
+                    Formas de Pagamento
+                </div>
+                <div class="formas">
+                    <ul>
+                        <li><i class="bi bi-credit-card-2-back"></i> Débito e Credito - <strong>Até 12px</strong></li>
+                        <li> <img src="/public/logotipo/pix.png" alt="icon pix"> Pix  <strong>ou</strong></li>
+                        <li><i class="bi bi-card-text"></i> Boleto</li>
+                    </ul>
+                </div>
+                <div class="pagamento_inteligent">
+                    <p><i class="bi bi-stars"></i> Você pode combinar duas formas de pagamento</p>
+                </div>
+            </div>
+
         </section>
 
         <section class="projetos" id="projetos">
