--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <html lang="pt-br">
 <head>
-
+    <meta name="author" content="Diego Pereira">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="DarkJS" content="Um profissional web, criação de portifolios, landpages, paginas de venda.>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="public/logotipo/logo.png" type="image/x-icon">
-
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="mobile.css">
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <title>Dev Pereira</title>
+    <title>Dark JS</title>
+    <meta property="og:title" content="DarkJS>
+    <meta property="og:description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
+    <meta property="og:image" href="public/banners/eu.png">
+
 </head>
 
 <body>
