--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Dark JS</title>
     <meta property="og:title" content="DarkJS>
     <meta property="og:description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
-    <meta property="og:image" href="public/banners/eu.png">
+    <meta property="og:image" content="public/banners/eu.png">
 
 </head>
 
