--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <meta name="DarkJS" content="Um profissional web, criação de portifolios, landpages, paginas de venda.>
+    <meta name="DarkJS" content="Um profissional web, criação de portifolios, landpages, paginas de venda.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="public/logotipo/logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="mobile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <title>Dark JS</title>
 
     <meta property="og:title" content="DarkJS">
     <meta property="og:description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
@@ -20,6 +19,7 @@
     <meta property="og:url" content="https://devdarkjs.netlify.app/"> 
 
     <meta name="revisit-after" content="7 days">
+    <title>Dark JS</title>
 
 </head>
 
