Nem eu sei como arrumar isso pro Discord

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="mobile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
-    <meta property="og:title" content="DarkJS">
     <meta property="og:description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
-    
     <meta property="og:image" content="https://images-ext-1.discordapp.net/external/fdYpW_Jb6j0J0iphmhT9Lo8TU2JFTttDJSO_jOPnIYs/https/i.imgur.com/cqd6Sgrh.jpg?format=webp&width=648&height=648">
     <meta property="og:url" content="https://devdarkjs.netlify.app/"> 
-
+    <meta property="og:title" content="DarkJS">
     <meta name="revisit-after" content="7 days">
+    <meta name="theme-color" content="#FF0000">
     <title>Dark JS</title>
 
 </head>
