--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta name="author" content="Diego Pereira">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
+    <meta name="url" content="https://devdarkjs.netlify.app/">
+    <link rel="icon" href="public/logotipo/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta name="DarkJS" content="Um profissional web, criação de portifolios, landpages, paginas de venda.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
