--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <meta property="og:image" content="https://images-ext-1.discordapp.net/external/fdYpW_Jb6j0J0iphmhT9Lo8TU2JFTttDJSO_jOPnIYs/https/i.imgur.com/cqd6Sgrh.jpg?format=webp&width=648&height=648">
     <meta property="og:url" content="https://devdarkjs.netlify.app/"> 
     <meta name="revisit-after" content="7 days">
+    <meta property="og:type" content="website" />
     <meta name="theme-color" content="#FF0000">
+    <meta property="og:title" content="DarkJS" />
     <title>DarkJS</title>
 
 </head>
