--- a/html/index.html
+++ b/html/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="img-abstratc">
-                    <img src="/public/banners/eu.png" alt="eu" width="600px">
+                    <img src="public/banners/eu.png" alt="eu" width="600px">
                 </div>
             </div>
 
