--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,6 @@
     <meta name="theme-color" content="#FF0000">
     <meta property="og:title" content="DarkJS" />
     <title>DarkJS</title>
-
 </head>
 
 <body>
@@ -30,7 +29,7 @@
         <div class="menu">
             <div class="menu-info">
                 <div class="logo">
-                    <img src="/public/logotipo/logo.png" alt="logo" width="100px">
+                    <img src="public/logotipo/logo.png" alt="logo" width="100px">
                 </div>
 
                 <div class="navbar">
@@ -72,7 +71,7 @@
                     </div>
                 </div>
                 <div class="img-abstratc">
-                    <img src="public/banners/eu.png" alt="eu" width="600px">
+                    <img src="/public/banners/eu.png" alt="eu" width="600px">
                 </div>
             </div>
 
