--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="public/logotipo/logo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="mobile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <meta property="og:description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
     <meta property="og:image" content="https://images-ext-1.discordapp.net/external/fdYpW_Jb6j0J0iphmhT9Lo8TU2JFTttDJSO_jOPnIYs/https/i.imgur.com/cqd6Sgrh.jpg?format=webp&width=648&height=648">
@@ -22,6 +20,9 @@
     <meta name="theme-color" content="#FF0000">
     <meta property="og:title" content="DarkJS" />
     <title>DarkJS</title>
+
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/mobile.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
         <div class="menu">
             <div class="menu-info">
                 <div class="logo">
-                    <img src="public/logotipo/logo.png" alt="logo" width="100px">
+                    <img src="/public/logotipo/logo.png" alt="logo" width="100px">
                 </div>
 
                 <div class="navbar">
