remove sub pasta

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
         <div class="menu">
             <div class="menu-info">
                 <div class="logo">
-                    <img src="/public/logotipo/logo.png" alt="logo" width="100px">
+                    <img src="/logotipo/logo.png" alt="logo" width="100px">
                 </div>
 
                 <div class="navbar">
@@ -64,7 +64,7 @@
 
                     <div class="links-desc">
                         <div class="btn-github">
-                            <button type="button"><a href="/public/curriculo/Curriculo Tec.pdf" target="_blank"><i class="bi bi-file-earmark-person-fill"></i></a></button>
+                            <button type="button"><a href="/curriculo/Curriculo Tec.pdf" target="_blank"><i class="bi bi-file-earmark-person-fill"></i></a></button>
                         </div>
                         <div class="btn-cv">
                             <button type="button"><a href="https://github.com/DevPereira1st"><i class="bi bi-github"></i> GitHub</a></button>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="img-abstratc">
-                    <img src="/public/banners/eu.png" alt="eu" width="600px">
+                    <img src="/banners/eu.png" alt="eu" width="600px">
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
 
         <section class="sobre-mim" id="sobre-mim">
             <a href="#" class="uppage-mobile">
-                <img src="/public/logotipo/seta.png" alt="btn-up">
+                <img src="/logotipo/seta.png" alt="btn-up">
             </a>
 
             <div class="titulo">
@@ -194,7 +194,7 @@
                 <div class="formas">
                     <ul>
                         <li><i class="bi bi-credit-card-2-back"></i> Débito e Credito - <strong>Até 12px</strong></li>
-                        <li> <img src="/public/logotipo/pix.png" alt="icon pix"> Pix  <strong>ou</strong></li>
+                        <li> <img src="/logotipo/pix.png" alt="icon pix"> Pix  <strong>ou</strong></li>
                         <li><i class="bi bi-card-text"></i> Boleto</li>
                     </ul>
                 </div>
@@ -223,7 +223,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="/public/videos/sancle3d.mp4" type="video/mp4">
+                          <source src="/videos/sancle3d.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -260,7 +260,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="/public/videos/programa em C.mp4" type="video/mp4">
+                          <source src="/videos/programa em C.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -294,7 +294,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="/public/videos/portfi.mp4" type="video/mp4">
+                          <source src="/videos/portfi.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -341,7 +341,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/boots.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/boots.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>Framework front-end gratuito e de código aberto que acelera o desenvolvimento de sites e aplicações web.</p>
@@ -350,7 +350,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/c.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/c.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>A linguagem C é uma linguagem de programação de alto nível, estruturada e compilada.</p>
@@ -359,7 +359,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/css.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/css.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>CSS é uma linguagem de estilo que define a apresentação visual de documentos, separando o conteúdo da sua aparência.</p>
@@ -368,7 +368,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/html.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/html.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>HTML é a linguagem padrão para criar e estruturar o conteúdo de páginas da web.</p>
@@ -377,7 +377,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/js.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/js.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>É uma linguagem de programação usada para adicionar interatividade a páginas da web, tornando-as dinâmicas para o usuário.</p>
@@ -386,7 +386,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/python.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/python.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>É uma linguagem de programação interpretada, de alto nível e orientada a objetos, criada para ser fácil de aprender e ler.</p>
@@ -395,7 +395,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/tail.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/tail.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>É um framework CSS que permite estilizar elementos diretamente no HTML usando classes pré-definidas.</p>
@@ -404,7 +404,7 @@
 
                 <div class="divskills">
                     <div class="img">
-                        <img src="/public/logosskills/visual.png" alt="Logo Bootstrap">
+                        <img src="/logosskills/visual.png" alt="Logo Bootstrap">
                     </div>
                     <div class="tit">
                         <p>É um editor de código-fonte gratuito, leve e de código aberto.</p>
@@ -435,7 +435,7 @@
 
                 <div class="sociais">
                     <div class="img-banner">
-                        <img src="/public/banners/sociais.png" alt="arte sociais">
+                        <img src="/banners/sociais.png" alt="arte sociais">
                     </div>
 
                     <div class="redes-contact">
