--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,8 @@
     <meta property="og:title" content="DarkJS" />
     <title>DarkJS</title>
 
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel="stylesheet" type="text/css" href="/mobile.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/mobiles.css">
 </head>
 
 <body>
