--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
     <meta name="url" content="https://devdarkjs.netlify.app/">
-    <link rel="icon" href="public/logotipo/logo.png" type="image/x-icon" />
+    <link rel="icon" href="logotipo/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta name="DarkJS" content="Um profissional web, criação de portifolios, landpages, paginas de venda.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="public/logotipo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logotipo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <meta property="og:description" content="Crio Portfólios, Landing Pages e Páginas de Vendas de alta conversão. Design profissional focado em resultados para o seu negócio. Veja meus projetos!">
     <meta property="og:image" content="https://images-ext-1.discordapp.net/external/fdYpW_Jb6j0J0iphmhT9Lo8TU2JFTttDJSO_jOPnIYs/https/i.imgur.com/cqd6Sgrh.jpg?format=webp&width=648&height=648">
@@ -21,8 +21,8 @@
     <meta property="og:title" content="DarkJS" />
     <title>DarkJS</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-    <link rel="stylesheet" type="text/css" href="/mobiles.css">
+    <link rel="stylesheet"  href="styles.css">
+    <link rel="stylesheet"  href="mobiles.css">
 </head>
 
 <body>
