--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
         <div class="menu">
             <div class="menu-info">
                 <div class="logo">
-                    <img src="/logotipo/logo.png" alt="logo" width="100px">
+                    <img src="logotipo/logo.png" alt="logo" width="100px">
                 </div>
 
                 <div class="navbar">
