--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="public/logotipo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="arquivos/logotipo/logo.png" type="image/x-icon">
     
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
         <div class="menu">
             <div class="menu-info">
                 <div class="logo">
-                    <img src="public/logotipo/logo.png" alt="logo" width="100px">
+                    <img src="arquivos/logotipo/logo.png" alt="logo" width="100px">
                 </div>
 
                 <div class="navbar">
@@ -36,7 +36,7 @@
         <section class="projetos" id="projetos">
 
             <a href="https://darkjs.vercel.app/" class="uppage-mobile">
-                <img src="public/logotipo/seta.png" alt="btn-up">
+                <img src="arquivos/logotipo/seta.png" alt="btn-up">
             </a>
 
 
@@ -55,7 +55,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="public/videos/sancle3d.mp4" type="video/mp4">
+                          <source src="arquivos/videos/sancle3d.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -92,7 +92,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="public/videos/programa em C.mp4" type="video/mp4">
+                          <source src="arquivos/videos/programa em C.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -126,7 +126,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="public/videos/portfi.mp4" type="video/mp4">
+                          <source src="arquivos/videos/portfi.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -164,7 +164,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="public/videos/link.mp4" type="video/mp4">
+                          <source src="arquivos/videos/link.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
@@ -202,7 +202,7 @@
 
                     <div class="vid-proj">
                         <video class="video" width="320" height="220" muted>
-                          <source src="public/videos/mascerenha.mp4" type="video/mp4">
+                          <source src="arquivos/videos/mascerenha.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="desc-proj">
