--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -325,7 +325,7 @@
                 </div>
 
                 <div class="ver-mais">
-                    <button><a href="/projetos/projetos.html"><i class="bi bi-arrows-angle-expand"></i> Ver Mais</a></button>
+                    <button><a href="projetos/projetos.html"><i class="bi bi-arrows-angle-expand"></i> Ver Mais</a></button>
                 </div>
 
             </div>
