Atualizar o index.html

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://darkjs.vercel.app/"> 
     <meta name="revisit-after" content="7 days">
     <meta property="og:type" content="website" />
-    <meta name="theme-color" content="#2f3136">
+    <meta name="theme-color" content="#437069">
     <meta property="og:title" content="DarkJS" />
     <title>DarkJS</title>
 
