Hello my friends, this update are for fix layout # Inglês fraco

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -142,71 +142,7 @@
             </div>
         </section>
 
-        <section class="oferta" id="oferta">
-            <div class="titulo">
-                <p><strong>Oferta</strong> Especial</p>
-            </div>
-            <div class="container-promo">
-                <div class="promocao">
-                    <div class="titulo-card">
-                        <p><strong>SITE</strong> a partir <br> de <strong>R$ 50,00</strong></p>
-                    </div>
-                    <div class="body-card">
-                        <ul>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Landpage.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Portifolios.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Página de Vendas.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Confiabilidade.</li>
-                            <li><i class="bi bi-fire"></i> Entrega em até 7 dias.</li>
-                            <li><i class="bi bi-fire"></i> Dinheiro protegido.</li>
-                        </ul>
-                    </div>
-                    <div class="button-card">
-                        <button><a href="https://wa.me/p/24783750501233442/556199654226" target="_blank">SAIBA MAIS</a></button>
-                    </div>                    
-                </div>
-                <div class="afiliado">
-                    <div class="titulo-card">
-                        <p><strong>AFILIADO</strong></p>
-                    </div>
-                    <div class="body-card">
-                        <ul>
-                            <li><i class="bi bi-fire"></i> Dinheiro Garantido.</li>
-                            <li><i class="bi bi-fire"></i> 25% do Valor.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Plataforma Segura.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Confiabilidade.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Renda Extra.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Pagamento em 30 dias.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Entrega automatizada.</li>
-                            <li><i class="bi bi-hand-thumbs-up-fill"></i> Sem Burocracia.</li>
-                        </ul>
-                    </div>
-                    <div class="button-card">
-                        <button><a href="https://dashboard.kiwify.com/join/affiliate/GHyOJKAF" target="_blank">SER AFILIADO</a></button>
-                    </div>  
-                </div>
-            </div>
-
-            <div class="pagamentos">
-                <div class="titu_pagamentos">
-                    Formas de Pagamento
-                </div>
-                <div class="formas">
-                    <ul>
-                        <li><i class="bi bi-credit-card-2-back"></i> Débito e Credito - <strong>Até 12px</strong></li>
-                        <li> <img src="arquivos/logotipo/pix.png" alt="icon pix"> Pix  <strong>ou</strong></li>
-                        <li><i class="bi bi-card-text"></i> Boleto</li>
-                    </ul>
-                </div>
-                <div class="pagamento_inteligent">
-                    <p><i class="bi bi-stars"></i> Você pode combinar duas formas de pagamento</p>
-                </div>
-            </div>
-
-        </section>
-
         <section class="projetos" id="projetos">
-
 
             <div class="projetos-desenvolvidos">
             <div class="titulo">
@@ -458,7 +394,7 @@
 
     </footer>
 
-    <script src="/js/video.js"></script>
+    <script src="./js/video.js"></script>
     
 </body>
 </html>
