Atualização de botões e fundo

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -36,7 +36,7 @@
         <section class="projetos" id="projetos">
 
             <a href="https://darkjs.vercel.app/" class="uppage-mobile">
-                <img src="arquivos/logotipo/seta.png" alt="btn-up">
+                <img src="arquivos/logotipo/back.svg" alt="btn-up">
             </a>
 
 
